--- a/fcc-test-suite-template-master/css/style.css
+++ b/fcc-test-suite-template-master/css/style.css
@@ -1,7 +1,20 @@
+
+main{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 #img-div{
-    max-width: 100%;
+    max-width: 1000px;
+   
   }
   #image{
    
-    width:100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    
   }
